@@ -2,9 +2,13 @@
 - fixed chunker bugs:
     - no longer emits empty chunks (was happening with large child elements of body) #224
     - no longer splits elements in NEVER_SPLIT list when they are only children. #226
+- fix missing empty line in txt output for copyrighted books #222
+- made copyright addition in header/footer case-insensitive
+
 
 0.12.42 April 01, 2024
 - fixed rst -> epub3 conversion
+
 
 0.12.41 March 01, 2024
 - clean up txt boilerplate. fixes easy parts of #220
@@ -17,6 +21,7 @@
 - fixed an issue parsing large text files. "The Entire Project Gutenberg Works of Mark Twain" was 1.2M.
 - fixed an issue detecting multiline boilerplate markers.
 - added an id 'pg-title-no-subtitle' to a span containing dc.title_no_subtitle
+
 
 0.12.39 January 31, 2024
 - fixed an EPUB3 problem affecting kobo reader when a book has more than 10 chapters - read order was being sorted as a string.
